Added some improvements. Added last modal.

--- a/pastelka/brands.html
+++ b/pastelka/brands.html
@@ -2006,7 +2006,7 @@
                     </ul>
                 </div>
 
-                <div class="brandsNames">
+                <div class="brandsNames _brandsNames">
                     <p class="brandsNamesText brandsText">Бренды</p>
                     <!--START brands-wrap-col-english-->
                     <div class="row">
@@ -2014,7 +2014,7 @@
                             <div class="row">
                                 <!--START brands-wrap-col-english-1-->
                                 <div class="col-sm-12 col-md-6">
-                                    <div class="wrapBrandsName _wrapBrandsName">
+                                    <div class="wrapBrandsName _wrapBrandsName open">
                                         <div class="brandsNameTitle">A</div>
 
                                         <ul class="brandsNamesList">
@@ -2060,7 +2060,7 @@
                                         </ul>
                                     </div>
 
-                                    <div class="wrapBrandsName">
+                                    <div class="wrapBrandsName _wrapBrandsName">
                                         <div class="brandsNameTitle">B</div>
 
                                         <ul class="brandsNamesList">
