--- a/pastelka/index.html
+++ b/pastelka/index.html
@@ -1006,6 +1006,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Для спальни <span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem2">
@@ -1065,6 +1066,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Для кухни <span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem3">
@@ -1124,6 +1126,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Для ванной <span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem4">
@@ -1183,6 +1186,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Для детской <span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem5">
@@ -1242,6 +1246,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Домашняя одежда <span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem6">
@@ -1301,6 +1306,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Детский мир <span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem7">
@@ -1360,6 +1366,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Домашний уют<span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem8">
@@ -1419,6 +1426,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Нижнее белье<span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem9">
@@ -1478,6 +1486,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Для отдыха <span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem10">
@@ -1537,6 +1546,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Для гостиниц <span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                     </ul>
