Added some improvements for 'brand' page.

--- a/pastelka/brands.html
+++ b/pastelka/brands.html
@@ -2014,7 +2014,7 @@
                             <div class="row">
                                 <!--START brands-wrap-col-english-1-->
                                 <div class="col-sm-12 col-md-6">
-                                    <div class="wrapBrandsName _wrapBrandsName open">
+                                    <div class="wrapBrandsName _wrapBrandsName">
                                         <div class="brandsNameTitle">A</div>
 
                                         <ul class="brandsNamesList">
@@ -2093,7 +2093,7 @@
                                             </li>
                                         </ul>
                                     </div>
-                                    <div class="wrapBrandsName">
+                                    <div class="wrapBrandsName _wrapBrandsName">
                                         <div class="brandsNameTitle">C</div>
 
                                         <ul class="brandsNamesList">
@@ -2131,7 +2131,7 @@
 
                                 <!--START brands-wrap-col-english-2-->
                                 <div class="col-sm-12 col-md-6">
-                                    <div class="wrapBrandsName">
+                                    <div class="wrapBrandsName _wrapBrandsName">
                                         <div class="brandsNameTitle">D</div>
 
                                         <ul class="brandsNamesList">
@@ -2161,7 +2161,7 @@
                                             </li>
                                         </ul>
                                     </div>
-                                    <div class="wrapBrandsName">
+                                    <div class="wrapBrandsName _wrapBrandsName">
                                         <div class="brandsNameTitle">E</div>
 
                                         <ul class="brandsNamesList">
@@ -2191,7 +2191,7 @@
                                             </li>
                                         </ul>
                                     </div>
-                                    <div class="wrapBrandsName">
+                                    <div class="wrapBrandsName _wrapBrandsName">
                                         <div class="brandsNameTitle">F</div>
 
                                         <ul class="brandsNamesList">
@@ -2247,7 +2247,7 @@
                             <div class="row">
                                 <!--START brands-wrap-col-english-3-->
                                 <div class="col-sm-12 col-md-6">
-                                    <div class="wrapBrandsName">
+                                    <div class="wrapBrandsName _wrapBrandsName">
                                         <div class="brandsNameTitle">G</div>
 
                                         <ul class="brandsNamesList">
@@ -2331,7 +2331,7 @@
                                             </li>
                                         </ul>
                                     </div>
-                                    <div class="wrapBrandsName">
+                                    <div class="wrapBrandsName _wrapBrandsName">
                                         <div class="brandsNameTitle">H</div>
 
                                         <ul class="brandsNamesList">
@@ -2384,7 +2384,7 @@
 
                                 <!--START brands-wrap-col-english-4-->
                                 <div class="col-sm-12 col-md-6">
-                                    <div class="wrapBrandsName">
+                                    <div class="wrapBrandsName _wrapBrandsName">
                                         <div class="brandsNameTitle">J</div>
 
                                         <ul class="brandsNamesList">
@@ -2428,7 +2428,7 @@
                                             </li>
                                         </ul>
                                     </div>
-                                    <div class="wrapBrandsName">
+                                    <div class="wrapBrandsName _wrapBrandsName">
                                         <div class="brandsNameTitle">I</div>
 
                                         <ul class="brandsNamesList">
@@ -2486,7 +2486,7 @@
                             <div class="row">
                                 <!--START brands-wrap-col-russian-1-->
                                 <div class="col-sm-12 col-md-6">
-                                    <div class="wrapBrandsName">
+                                    <div class="wrapBrandsName _wrapBrandsName">
                                         <div class="brandsNameTitle">А</div>
 
                                         <ul class="brandsNamesList">
@@ -2502,7 +2502,7 @@
                                 <!--END brands-wrap-col-russian-1-->
                                 <!--START brands-wrap-col-russian-2-->
                                 <div class="col-sm-12 col-md-6">
-                                    <div class="wrapBrandsName">
+                                    <div class="wrapBrandsName _wrapBrandsName">
                                         <div class="brandsNameTitle">Б</div>
 
                                         <ul class="brandsNamesList">
@@ -2522,7 +2522,7 @@
                             <div class="row">
                                 <!--START brands-wrap-col-russian-3-->
                                 <div class="col-sm-12 col-md-6">
-                                    <div class="wrapBrandsName">
+                                    <div class="wrapBrandsName _wrapBrandsName">
                                         <div class="brandsNameTitle">В</div>
 
                                         <ul class="brandsNamesList">
@@ -2538,7 +2538,7 @@
                                 <!--START brands-wrap-col-russian-3-->
                                 <!--START brands-wrap-col-russian-4-->
                                 <div class="col-sm-12 col-md-6">
-                                    <div class="wrapBrandsName">
+                                    <div class="wrapBrandsName _wrapBrandsName">
                                         <div class="brandsNameTitle">Л</div>
 
                                         <ul class="brandsNamesList">
