--- a/pastelka/404.html
+++ b/pastelka/404.html
@@ -19,7 +19,6 @@
 
     <!--START header-->
     <header class="mainHeader">
-
         <!--START header-top-->
         <div class="wrapHeaderTop">
             <div class="container">
@@ -620,7 +619,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="modalFormEnter">
-                                                            <a class="forgotPasswordLink" href="">Забыли пароль?</a>
+                                                            <a class="forgotPasswordLink" href="#" data-toggle="modal" data-target="#modalForgotLogin">Забыли пароль?</a>
                                                             <button class="modalFormEnterBtn">Войти</button>
                                                         </div>
                                                     </form>
@@ -635,6 +634,77 @@
                                 </div>
                             </div>
                             <!--END modal-login-->
+
+                            <!--START modal-login-forgot-->
+                            <div class="modal fade" id="modalForgotLogin">
+                                <div class="wrapModalGlobal">
+                                    <div class="modal-dialog modal-md">
+                                        <div class="modalLoginForgot modalGlobal">
+                                            <div class="modalHeader">
+                                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="icon-close"></span></button>
+                                                <h2 class="modalTitle">Напомнить пароль</h2>
+                                            </div>
+                                            <div class="modalBody">
+                                                <div class="modalForm">
+                                                    <form class="form-horizontal" role="form">
+                                                        <div class="form-group">
+                                                            <label for="inputLoginForgot" class="col-sm-12 control-label control-label-login">Введите Логин или E-mail</label>
+                                                            <div class="col-sm-10">
+                                                                <input type="text" class="form-control" id="inputLoginForgot">
+                                                            </div>
+                                                        </div>
+                                                        <div class="modalFormEnter">
+                                                            <button class="modalFormEnterBtn">Отправить пароль</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                                <div class="modalNotRegister">
+                                                    <p class="modalNotRegisterText">Еще не зарегистрированы у нас?</p>
+                                                    <button class="modalNotRegisterBtn">Зарегистрироваться</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--END modal-login-forgot-->
+
+                            <!--START modal-login-new-->
+                            <div class="modal fade" id="modalLoginNew">
+                                <div class="wrapModalGlobal">
+                                    <div class="modal-dialog modal-md">
+                                        <div class="modalLoginNew modalGlobal">
+                                            <div class="modalHeader">
+                                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="icon-close"></span></button>
+                                                <h2 class="modalTitle">Bxoд в интернет-магазин</h2>
+                                            </div>
+                                            <div class="modalBody">
+                                                <div class="modalForm">
+                                                    <form class="form-horizontal" role="form">
+                                                        <div class="form-group">
+                                                            <label for="inputLogin" class="col-xs-3 col-sm-2 control-label">Логин</label>
+                                                            <div class="col-xs-9 col-sm-10">
+                                                                <input type="text" class="form-control" id="inputLoginNew">
+                                                            </div>
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <label for="inputPassword" class="col-xs-3 col-sm-2 control-label">Пароль</label>
+                                                            <div class="col-xs-9 col-sm-10">
+                                                                <input type="password" class="form-control" id="inputPasswordNew">
+                                                            </div>
+                                                        </div>
+                                                        <div class="modalFormEnter">
+                                                            <button class="modalFormEnterBtn">Войти</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--END modal-login-new-->
+
                         </div>
                     </div>
                 </div>
