--- a/pastelka/indexNotFound.html
+++ b/pastelka/indexNotFound.html
@@ -742,7 +742,6 @@
                         <div class="col-sm-8 col-md-9">
                             <div class="headerMiddleContentRight">
                                 <div class="row">
-
                                     <div class="middleContentRightTop">
                                         <div class="col-xs-5 col-sm-6 col-md-7">
                                             <div class="headerLogo">
@@ -758,7 +757,7 @@
                                                 </div>
                                                 <div class="headerInfoCart">
                                                     <div class="infoCartIcon">
-                                                        <span class="icon-bag"></span>
+                                                        <span class="icon-bag" data-toggle="modal" data-target="#modalCart"></span>
                                                     </div>
                                                     <div class="infoCart">
                                                         <a class="infoCartTitleLink" data-toggle="modal" data-target="#modalCart" href="#">Корзина</a>
@@ -964,6 +963,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Для спальни <span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem2">
@@ -1023,6 +1023,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Для кухни <span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem3">
@@ -1082,6 +1083,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Для ванной <span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem4">
@@ -1141,6 +1143,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Для детской <span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem5">
@@ -1200,6 +1203,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Домашняя одежда <span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem6">
@@ -1259,6 +1263,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Детский мир <span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem7">
@@ -1318,6 +1323,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Домашний уют<span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem8">
@@ -1377,6 +1383,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Нижнее белье<span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem9">
@@ -1436,6 +1443,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Для отдыха <span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                         <li class="headerCategoryItem headerCategoryItem10">
@@ -1495,6 +1503,7 @@
                                         <a class="headerCategorySubLink" href="">Все для детской спальни</a>
                                     </li>
                                 </div>
+                                <a class="allCategorySubLink" href="">Все Для гостиниц <span class="icon-next-full"></span></a>
                             </ul>
                         </li>
                     </ul>
