--- a/pastelka/catalog.html
+++ b/pastelka/catalog.html
@@ -3628,6 +3628,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.3/js/bootstrap-select.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/jquery.dlmenu.js"></script>
+<script src="js/vertical.js"></script>
 <script>
     $(function() {
         $( '#dl-menu' ).dlmenu({
