--- a/pastelka/index.html
+++ b/pastelka/index.html
@@ -2160,7 +2160,7 @@
         <!--START slider-->
         <div class="container">
             <div class="homePageSlider">
-                <div id="carousel" class="carousel slide" data-ride="carousel">
+                <div id="carouselHome" class="carousel slide" data-ride="carousel">
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
