--- a/power/index.html
+++ b/power/index.html
@@ -67,11 +67,11 @@
     <!--START footer-->
     <footer class="mainFooter">
         <div class="footer">
-            <form action="" class="footerForm">
+            <form id="form" action="" class="footerForm">
                 <input type="text" name="name" placeholder="П.І.Б." required/>
                 <input type="tel" name="phone" placeholder="ТЕЛ." required/>
                 <textarea name="text" id="" placeholder="ВАШЕ ПИТАННЯ" required></textarea>
-                <button class="footerFormBtn _footerFormBtn" type="submit"></button>
+                <button class="footerFormBtn _footerFormBtn"></button>
             </form>
             <div class="footerAddress">
                <div class="footerDistrict">ОКРУГ №64, КИЇВ</div>
@@ -84,7 +84,7 @@
                     <a class="socialTwitter" href="https://twitter.com/olesshulga"></a>
                     <a class="socialFacebook" href="https://www.facebook.com/profile.php?id=100010272407374"></a>
                 </div>
-                <a href="http://yedyna-syla.in.ua" class="footerSocialLink">http://yedyna-syla.in.ua</a>
+                <a href="http://yedyna-syla.in.ua" class="footerSocialLink">yedyna-syla.in.ua</a>
             </div>
         </div>
     </footer>
