Added footer styles.

--- a/chesnok/markup/modules/footer/footer.html
+++ b/chesnok/markup/modules/footer/footer.html
@@ -11,31 +11,31 @@
                                     <li class="itemLinkFooter">
                                         <a href="#" class="linkFooter">
                                             <i class="icon-handshake"></i>
-                                            Сотрудничество с нами
+                                            <span class="textLinkFooter">Сотрудничество с нами</span>
                                         </a>
                                     </li>
                                     <li class="itemLinkFooter">
                                         <a href="#" class="linkFooter">
                                             <i class="icon-discount-label"></i>
-                                            Дисконтная программа
+                                           <span class="textLinkFooter"> Дисконтная программа</span>
                                         </a>
                                     </li>
                                     <li class="itemLinkFooter">
                                         <a href="#" class="linkFooter">
                                             <i class="icon-exchange"></i>
-                                            Обмен/Возврат
+                                            <span class="textLinkFooter">Обмен/Возврат</span>
                                         </a>
                                     </li>
                                     <li class="itemLinkFooter">
                                         <a href="#" class="linkFooter">
                                             <i class="icon-star"></i>
-                                            Гарантии
+                                            <span class="textLinkFooter">Гарантии</span>
                                         </a>
                                     </li>
                                     <li class="itemLinkFooter">
                                         <a href="#" class="linkFooter">
                                             <i class="icon-document"></i>
-                                            Документы
+                                            <span class="textLinkFooter">Документы</span>
                                         </a>
                                     </li>
                                 </ul>
@@ -92,9 +92,9 @@
                                 <h4 class="titleDeliveryFooter">Подписаться на почтовую рассылку</h4>
 
                                 <form action="" class="formDeliveryFooter">
-                                    <input type="text" class="inputDeliveryFooter inputDeliveryMail">
-                                    <input type="text" class="inputDeliveryFooter inputDeliveryName">
-                                    <button class="buttonDeliveryFooter">
+                                    <input type="text" class="inputDeliveryFooter inputDeliveryMail" placeholder="Введите ваш e-mail">
+                                    <input type="text" class="inputDeliveryFooter inputDeliveryName" placeholder="Имя">
+                                    <button class="btnGreen buttonDeliveryFooter">
                                         <i class="icon-arrowRightCircle"></i>
                                     </button>
                                 </form>
