Added slider and base html for block novelty.

--- a/chesnok/markup/pages/index.html
+++ b/chesnok/markup/pages/index.html
@@ -20,9 +20,13 @@
 
     <section class="wrapper">
 
-        <!-- Include your modules here -->
+        <!--START slider-->
+        {{> sliderHome/slider}}
+        <!--END slider-->
 
-        {{> example/example}}
+        <!--START slider-->
+        {{> novelty/novelty}}
+        <!--END slider-->
 
 
     </section>
