--- a/chesnok/markup/modules/footer/footer.html
+++ b/chesnok/markup/modules/footer/footer.html
@@ -48,7 +48,14 @@
                                 <a href="tel:+380656987584" class="phoneContactMiddle">8 (065) 698-75-84</a>
                             </div>
                             <div class="creditCardsFooter">
-
+                                <a href="#" class="linkCreditCardFooter">
+                                    <img class="searchResultImage" src="%=staticPrefix=%img/general/cards/masterCard.png"
+                                         alt=""/>
+                                </a>
+                                <a href="#" class="linkCreditCardFooter">
+                                    <img class="searchResultImage" src="%=staticPrefix=%img/general/cards/visaCard.png"
+                                         alt=""/>
+                                </a>
                             </div>
                         </div>
                     </div>
