--- a/chesnok/markup/pages/index.html
+++ b/chesnok/markup/pages/index.html
@@ -24,10 +24,33 @@
         {{> sliderHome/slider}}
         <!--END slider-->
 
-        <!--START slider-->
+        <!--START novelty-->
         {{> novelty/novelty}}
-        <!--END slider-->
+        <!--END novelty-->
 
+        <!--START hot offer-->
+        {{> hotOffer/hotOffer}}
+        <!--END hot offer-->
+
+        <!--START viewed-->
+        {{> viewed/viewed}}
+        <!--END viewed-->
+
+        <!--START articles-->
+        {{> articles/articles}}
+        <!--END articles-->
+
+        <!--START news-->
+        {{> news/news}}
+        <!--END news-->
+
+        <!--START text about-->
+        {{> textAbout/textAbout}}
+        <!--END text about-->
+
+        <!--START scroll top-->
+        {{> scrollTopBottom/scrollTopBottom}}
+        <!--END scroll bottom-->
 
     </section>
 
