--- a/chesnok/markup/modules/footer/footer.html
+++ b/chesnok/markup/modules/footer/footer.html
@@ -43,17 +43,17 @@
                         </div>
                         <div class="col-md-6">
                             <div class="contactFooter">
-                                <a href="tel:+380683569687" class="phoneContactMiddle">8 (068) 356-96-87</a>
-                                <a href="tel:+380656987584" class="phoneContactMiddle">8 (065) 698-75-84</a>
-                                <a href="tel:+380656987584" class="phoneContactMiddle">8 (065) 698-75-84</a>
+                                <a href="tel:+380683569687" class="footerPhoneContact">8 (068) 356-96-87</a>
+                                <a href="tel:+380656987584" class="footerPhoneContact">8 (065) 698-75-84</a>
+                                <a href="tel:+380656987584" class="footerPhoneContact">8 (065) 698-75-84</a>
                             </div>
                             <div class="creditCardsFooter">
                                 <a href="#" class="linkCreditCardFooter">
-                                    <img class="searchResultImage" src="%=staticPrefix=%img/general/cards/masterCard.png"
+                                    <img class="imgCreditCard" src="%=staticPrefix=%img/general/cards/masterCard.png"
                                          alt=""/>
                                 </a>
                                 <a href="#" class="linkCreditCardFooter">
-                                    <img class="searchResultImage" src="%=staticPrefix=%img/general/cards/visaCard.png"
+                                    <img class="imgCreditCard" src="%=staticPrefix=%img/general/cards/visaCard.png"
                                          alt=""/>
                                 </a>
                             </div>
