--- a/chesnok/markup/modules/viewed/viewed.html
+++ b/chesnok/markup/modules/viewed/viewed.html
@@ -1,9 +1,9 @@
 <section class="noveltyWrap">
     <div class="container">
-        <h2 class="blockTitle">Новинки</h2>
+        <h2 class="blockTitle">Просмотренные товары</h2>
 
         <div class="row">
-            <div id="carouselNovelty" class="carousel slide">
+            <div id="carouselViewed" class="carousel slide">
                 <div class="noveltyCarouselWrap">
                     <div class="carousel-inner">
                         <div class="item active">
@@ -211,10 +211,10 @@
                     </div>
                 </div>
                 <div class="carouselArrows">
-                    <a class="left carousel-control" href="#carouselNovelty" data-slide="prev">
+                    <a class="left carousel-control" href="#carouselViewed" data-slide="prev">
                         <i class="icon-arrowLeftBig"></i>
                     </a>
-                    <a class="right carousel-control" href="#carouselNovelty" data-slide="next">
+                    <a class="right carousel-control" href="#carouselViewed" data-slide="next">
                         <i class="icon-arrowRightBig"></i>
                     </a>
                 </div>
