--- a/chesnok/markup/modules/footer/footer.html
+++ b/chesnok/markup/modules/footer/footer.html
@@ -1,4 +1,3 @@
-
 <footer class="footerMain _footerMain">
     <div class="footer">
         <div class="container">
@@ -17,7 +16,7 @@
                                     <li class="itemLinkFooter">
                                         <a href="#" class="linkFooter">
                                             <i class="icon-discount-label"></i>
-                                           <span class="textLinkFooter"> Дисконтная программа</span>
+                                            <span class="textLinkFooter"> Дисконтная программа</span>
                                         </a>
                                     </li>
                                     <li class="itemLinkFooter">
@@ -43,9 +42,17 @@
                         </div>
                         <div class="col-md-6">
                             <div class="contactFooter">
-                                <a href="tel:+380683569687" class="footerPhoneContact">8 (068) 356-96-87</a>
-                                <a href="tel:+380656987584" class="footerPhoneContact">8 (065) 698-75-84</a>
-                                <a href="tel:+380656987584" class="footerPhoneContact">8 (065) 698-75-84</a>
+                                <ul class="listContactFooter">
+                                    <li class="itemContactFooter">
+                                        <a href="tel:+380683569687" class="footerPhoneContact">8 (068) 356-96-87</a>
+                                    </li>
+                                    <li class="itemContactFooter">
+                                        <a href="tel:+380656987584" class="footerPhoneContact">8 (065) 698-75-84</a>
+                                    </li>
+                                    <li class="itemContactFooter">
+                                        <a href="tel:+380656987584" class="footerPhoneContact">8 (065) 698-75-84</a>
+                                    </li>
+                                </ul>
                             </div>
                             <div class="creditCardsFooter">
                                 <a href="#" class="linkCreditCardFooter">
@@ -99,7 +106,8 @@
                                 <h4 class="titleDeliveryFooter">Подписаться на почтовую рассылку</h4>
 
                                 <form action="" class="formDeliveryFooter">
-                                    <input type="text" class="inputDeliveryFooter inputDeliveryMail" placeholder="Введите ваш e-mail">
+                                    <input type="text" class="inputDeliveryFooter inputDeliveryMail"
+                                           placeholder="Введите ваш e-mail">
                                     <input type="text" class="inputDeliveryFooter inputDeliveryName" placeholder="Имя">
                                     <button class="btnGreen buttonDeliveryFooter">
                                         <i class="icon-arrowRightCircle"></i>
