--- a/chesnok/markup/pages/index.html
+++ b/chesnok/markup/pages/index.html
@@ -48,6 +48,10 @@
         {{> textAbout/textAbout}}
         <!--END text about-->
 
+        <!--START preview-->
+        {{> preview/preview}}
+        <!--END preview-->
+
         <!--START scroll top-->
         {{> scrollTopBottom/scrollTopBottom}}
         <!--END scroll bottom-->
@@ -58,15 +62,48 @@
     {{> footer/footer}}
     <!-- END footer -->
 
-    <!-- Main scripts. You can replace it, but I recommend you to leave it here     -->
-    <script src="%=staticPrefix=%js/main%=hash=%%=min=%.js"></script>
+    <!-- Main scripts. You can replace it, but I recommend you to leave it here-->
+
+    <!--<script src="%=staticPrefix=%js/separate-js/jquery-2.1.4.min.js" type="text/javascript"></script>-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="%=staticPrefix=%js/separate-js/royalSlider.js" type="text/javascript"></script>
+
     <script>
         $(function () {
             $('#dl-menu').dlmenu({
                 animationClasses: {classin: 'dl-animate-in-2', classout: 'dl-animate-out-2'}
             });
+
+            $('._royalSlider').royalSlider({
+                fullscreen: {
+                    enabled: false,
+                    nativeFS: true
+                },
+                controlNavigation: 'thumbnails',
+                autoScaleSlider: true,
+                autoScaleSliderWidth: 500,
+                autoScaleSliderHeight: 700,
+                loop: false,
+                imageScaleMode: 'fit-if-smaller',
+                navigateByClick: true,
+                numImagesToPreload: 6,
+                arrowsNav: false,
+                arrowsNavAutoHide: true,
+                arrowsNavHideOnTouch: true,
+                keyboardNavEnabled: true,
+                fadeinLoadedSlide: true,
+                globalCaption: true,
+                globalCaptionInside: false,
+                thumbs: {
+                    appendSpan: true,
+                    firstMargin: true,
+                    paddingBottom: 4
+                }
+            });
         });
     </script>
+
+    <script src="%=staticPrefix=%js/main%=hash=%%=min=%.js"></script>
 </body>
 
 </html>
