Added new pages

--- a/chesnok/markup/modules/ordering/orderingContent.html
+++ b/chesnok/markup/modules/ordering/orderingContent.html
@@ -8,19 +8,19 @@
                         <div class="blockOrderingForm">
                             <h3 class="titleOrderingForm">Личные данные</h3>
 
-                            <input type="text" class="inputGlobal inputName" placeholder="Имя">
-                            <input type="text" class="inputGlobal inputName" placeholder="Фамилия">
-                            <input type="email" class="inputGlobal inputName" placeholder="E-mail">
-                            <input type="tel" class="inputGlobal inputName" placeholder="Телефон">
+                            <input type="text" class="inputGlobal" placeholder="Имя">
+                            <input type="text" class="inputGlobal" placeholder="Фамилия">
+                            <input type="email" class="inputGlobal" placeholder="E-mail">
+                            <input type="tel" class="inputGlobal" placeholder="Телефон">
                         </div>
 
                         <div class="blockOrderingForm">
                             <h3 class="titleOrderingForm">Адрес доставки</h3>
 
-                            <input type="text" class="inputGlobal inputName" placeholder="Область">
-                            <input type="text" class="inputGlobal inputName" placeholder="Город">
-                            <input type="text" class="inputGlobal inputName" placeholder="Адрес">
-                            <input type="text" class="inputGlobal inputName" placeholder="Индекс">
+                            <input type="text" class="inputGlobal" placeholder="Область">
+                            <input type="text" class="inputGlobal" placeholder="Город">
+                            <input type="text" class="inputGlobal" placeholder="Адрес">
+                            <input type="text" class="inputGlobal" placeholder="Индекс">
                         </div>
 
                         <div class="blockOrderingForm">
