--- a/chesnok/markup/modules/preview/preview.html
+++ b/chesnok/markup/modules/preview/preview.html
@@ -74,7 +74,7 @@
                                                 </div>
                                                 <div class="productInfoBottom clearfix">
                                                     <div class="priceProduct pull-left">1 550 грн.</div>
-                                                    <div class="btn btnOrange pull-right">Уведомить о поступлении</div>
+                                                    <div class="btn btnOrange _btnNotify pull-right" data-toggle="modal" data-target="#modalEntrance">Уведомить о поступлении</div>
                                                     <!--<div class="btn btnGreen pull-right">Купить</div>-->
                                                 </div>
                                             </div>
@@ -403,7 +403,7 @@
                                                 </div>
                                                 <div class="productInfoBottom clearfix">
                                                     <div class="priceProduct pull-left">1 550 грн.</div>
-                                                    <div class="btn btnOrange pull-right">Уведомить о поступлении</div>
+                                                    <div class="btn btnOrange _btnNotify pull-right" data-toggle="modal" data-target="#modalEntrance">Уведомить о поступлении</div>
                                                     <!--<div class="btn btnGreen pull-right">Купить</div>-->
                                                 </div>
                                             </div>
