--- a/chesnok/markup/modules/productCardContent/productCardContent.html
+++ b/chesnok/markup/modules/productCardContent/productCardContent.html
@@ -59,7 +59,7 @@
                         <h2 class="titleProductInfo">Сковорода для жарки  MONETA SAVER 28 х 5,7 см</h2>
                         <div class="productInfoBottom clearfix">
                             <div class="priceProduct pull-left">1 550 грн.</div>
-                            <!--<div class="btn btnOrange pull-right">Уведомить о поступлении</div>-->
+                            <!--<div class="btn btnOrange pull-right" data-toggle="modal" data-target="#modalEntrance">Уведомить о поступлении</div>-->
                             <div class="btn btnGreen btnBuy pull-right">Купить</div>
                         </div>
                     </div>
