--- a/chesnok/markup/pages/index.html
+++ b/chesnok/markup/pages/index.html
@@ -52,6 +52,10 @@
         {{> preview/preview}}
         <!--END preview-->
 
+        <!--START modal-entrance-->
+        {{> entranceModal/entranceModal}}
+        <!--END modal-entrance-->
+
         <!--START scroll top-->
         {{> scrollTopBottom/scrollTopBottom}}
         <!--END scroll bottom-->
