--- a/chesnok/markup/pages/productCard.html
+++ b/chesnok/markup/pages/productCard.html
@@ -36,6 +36,10 @@
         {{> preview/preview}}
         <!--END preview-->
 
+        <!--START modal-entrance-->
+        {{> entranceModal/entranceModal}}
+        <!--END modal-entrance-->
+
         <!--START scroll top-->
         {{> scrollTopBottom/scrollTopBottom}}
         <!--END scroll bottom-->
