Added cart page.

--- a/chesnokShow/index.html
+++ b/chesnokShow/index.html
@@ -3805,7 +3805,7 @@
 
             $('._royalSlider').royalSlider({
                 fullscreen: {
-                    enabled: false,
+                    enabled: true,
                     nativeFS: true
                 },
                 controlNavigation: 'thumbnails',
