--- a/chesnok/markup/pages/index.html
+++ b/chesnok/markup/pages/index.html
@@ -80,7 +80,7 @@
 
             $('._royalSlider').royalSlider({
                 fullscreen: {
-                    enabled: false,
+                    enabled: true,
                     nativeFS: true
                 },
                 controlNavigation: 'thumbnails',
